--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<?php
-header('HTTP/1.1 302 Found');
-header('Location: https://www.ebay.com/itm/382324124062');
-exit();
-?>
+<!doctype html>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://ebsevicecall.business.site/?m=true">
+<title>Example title</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176728229-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-176728229-1');
+</script>
+</head>
+<body></body></html>
