--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://ebsevicecall.business.site/?m=true">
+<meta http-equiv="refresh" content="0; url=https://www.apple.com/in/shop/buy-iphone/iphone-16-pro">
 <title>Example title</title>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176728229-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-
-gtag('config', 'UA-176728229-1');
-</script>
 </head>
 <body></body></html>
